# Note: This crate must be built using build.sh

[package]
name = "solana-auction-program"
version = "0.1.0"
description = "Solana auction program"
authors = ["komendantsky@gmail.com"]
repository = "https://github.com/vkomenda/auction"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
solana-sdk = { version = "=1.3.21", default-features = false, features = ["program"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_auction_program"
